Fix the scrollbar issue?

--- a/NodeBeacon/static/util/styles/chatter.css
+++ b/NodeBeacon/static/util/styles/chatter.css
@@ -107,6 +107,8 @@ section ul {
     top: 0;
     right: 0;
     bottom: 0;
+    margin: 0;
+    padding: 0;
 }
 
 section ul li {
